test: Create MicrostreamTemplate
Signed-off-by: Otavio Santana <otaviopolianasantana@gmail.com>